5.10 배열 안의 원소로 순열 구하기(테스트 추가)